templates/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "synctree-ingress"
  namespace: synctree
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /ping.html
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: YOUR-CERT-ARN
spec:
  rules:
  - host: studio.YOUR-DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synctree-studio
            port:
              number: 80
  - host: tool.YOUR-DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synctree-tool
            port:
              number: 80 
  - host: api.YOUR-DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synctree-tool-proxy
            port:
              number: 80 
  - host: portal.YOUR-DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synctree-portal
            port:
              number: 80 
  - host: portal-admin.YOUR-DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synctree-portal-admin
            port:
              number: 80
